--- a/Problema/index.html
+++ b/Problema/index.html
@@ -10,7 +10,7 @@
       <div role="navigation" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"> 
+            <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="http://laboratoria.la/" class="navbar-brand"> 
               <h1>Start Bootstrap</h1></a>
           </div>
           <div class="navbar-collapse collapse">
